<resources>
    <string name="app_name">Turtle Up</string>

    <!--Welcome Message Main Fragment-->
    <string name="welcome_message">Moti Here! Below you will find surprising turtle facts, and motivational text. Don\'t forget to save your favorite facts!</string>

    <!--Main Fragment Buttons Text-->
    <string name="turtle_fact_button_text">Turtle Facts</string>
    <string name="main_favorite_turtle_button_text">Favorites Turtle Fact</string>
    <string name="moti_talks_button_text">Moti Phrases</string>
    <string name="widget_instructions_button">Widget Instructions</string>
    <string name="credits_button_text">Credit</string>

    <string name="bundle_button_id_label">button_id</string>

    <string name="facts_string_id">facts</string>
    <string name="favorites_string_id">favorites</string>

    <!--Fact Fragment Labels-->
    <string name="fact_topic_label">Topic</string>
    <string name="fact_type_label">Types</string>
    <string name="fact_location_label">Location</string>
    <string name="fact_diet_label">Diet</string>
    <string name="fact_pet_rating_label">Pet Rating</string>
    <string name="fact_scientific_name_label">Scientific Name</string>
    <string name="fact_fact_label">Fact</string>
    <string name="fact_application_label">Motivation Benefit</string>

    <!--Mock Facts for  Fact view-->
    <string name="mock_name">What are turtles?</string>
    <string name="mock_type">General</string>
    <string name="mock_image">https://www.goodfreephotos.com/albums/animals/reptiles-and-amphibians/small-green-turtle-on-rock.jpg</string>
    <string name="mock_fact">The term turtle includes tortoises (terrestrial) and sea turtles (aquatic). Turtles belong to the oldest reptile groups, and fossils have been found that date back to the age of the dinosaurs</string>
    <string name="mock_locations">South America</string>
    <string name="mock_diet">Omnivore</string>
    <string name="mock_pet_rating">9.5</string>
    <string name="mock_scientific_name">imaginativeterrium</string>
    <string name="mock_application">It\'s fun to use you imagination</string>
    <string name="mock_land_sea">landlover</string>

    <!--Mock Motivational for Moti talk view-->
    <string name="motivational_title_label">Turtle Motivation</string>
    <string name="motivational_source_tect">Precise determination</string>

    <!--Widget Instructions-->
    <string name="instructions_step_longpress">To set up the widget on your home screen. Long hold on an empty space</string>
    <string name="instructions_select_widgets">Select Widgets</string>
    <string name="instructions_scroll_and_select_widget">Search for Daily Moti sayings</string>
    <string name="instructions_select_and_resize">Select the Daily Moti Widget and drop it onto you homescreen and resize as desired.</string>

    <!--Favorites Fragment-->
    <string name="favorites_title_label">Turtle Fact favorites</string>

    <!--Row-->
    <string name="row_title_string">Turtles are amazing</string>
    <string name="row_descritpion_string">Learn when taking it slow comes in handy</string>

    <!--Widget Instructions Fragment-->
    <string name="widget_title_label">Using the motivational Widget</string>
    <string name="widget_instructions">\n 1. From the home screen touch and hold to bring up the menu \n 2. Click on Widgets \n 3. Scroll down until you find the TurtleUp Widget.\n Drag and drop it to add it to you home screen \n You can add multiple widgets for different saying! \n Don\'t forget to resize the widget</string>

    <!--Credits -->
    <string name="credits_title_label">Turtle Fact Credits</string>
    <string name="color_style_credit">To be Determined</string>
    <string name="informations_credits">To be Determined</string>


    <!--Add to favorites -->
    <string name="add_to_favorites_buttons">Add to favorites button</string>
    <string name="remove_from_favorites_buttons">Remove from favorites button</string>

    <!--Add to favorites -->
    <string name="add_to_message">Adding to favorites button</string>
    <string name="remove_from_message">Removed from favorites button</string>


    <!--Realtime DB values -->
    <string name="turtle_facts_from_db">turtles</string>
    <string name="imageQuery">image</string>
    <string name="petRatingQuery">pet_rating</string>
    <string name="factQuery">fact</string>
    <string name="dietQuery">Diet</string>
    <string name="locationsQuery">locations</string>
    <string name="scientificNameQuery">scientific_name</string>
    <string name="idQuery">id</string>
    <string name="typeQuery">type</string>
    <string name="landOrSeaQuery">land_or_sea</string>
    <string name="nameQuery">Name</string>
    <string name="applicationQuery">application</string>


    <string name="credits_from_db">credits</string>
    <string name="tag_message">Value is:</string>
    <string name="failed_to_read">Failed to read:</string>

    <string name="scroll_state">scrollState</string>
    <string name="n_a">N/A</string>

    <string name="database">database_favorites</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    <!--Credit -->
    <string name="credit_list"> This project was executed initally by Keyeona Cole but was completed with the help of many! Thank You Udacity, and the udacity mentors who proved to be an amazing resource!. Thank you classmates and FAM cohort for being a valuabe team. Honored to be apart of this team with you. Thank you to the AND team that patiently answered questions and shared a treasure trove of information. Thank you Britannica for the wonderful turtle facts!  </string>

    <string name="name_content_description_row_image">Turtle related imaged</string>
    <string name="content_description_moti">Moti the turtle Image</string>

    <string name="no_favorities">No Favorite facts to share open the app and save a fact as favorite.</string>
    <string name="ad_mob_id">ca-app-pub-4459165054544600~9377354548</string>

    <string name="in_favorites">This fact is saved to you favorites.</string>



    <!--Main Fragment Buttons Text-->
    <string name="local_phrase_1">You can do it!!!!!!</string>
    <string name="local_phrase_2">Hey! You\'re doing great!</string>
    <string name="local_phrase_3">Every failure is a success, you\'ve learned something new</string>
    <string name="local_phrase_4">Don\'t worry even I mke mstcakes</string>
    <string name="local_phrase_5">I woke up on the wrong side of the bed, sooo I went back to bed and tried it again</string>
    <string name="local_phrase_6">I\’ve just written a song about tortillas; actually, it\’s more of a rap.</string>
    <string name="local_phrase_7">You know what I just found perfection! It\'s in the dictionary, so far that the only place I\'ve seen it</string>
    <string name="local_phrase_8">I recently decided to sell my vacuum cleaner as all it was doing was gathering dust.</string>
    <string name="local_phrase_9">Chooo Choooo just slowly chigging a long</string>
    <string name="local_phrase_10">Let\'s take a moment to reflect on something wonderful today!</string>
    <string name="local_phrase_11">The best thing about today is you!</string>
    <string name="local_phrase_12">Yeah, hugs are nice. I could really go for a hug right now. C\'mon bring it in..</string>
    <string name="local_phrase_13">You know what 0 + 0 is? Well I can tell you it the number of time you need to harshly criticize your work.</string>
    <string name="local_phrase_14">How\'s it going? Just wanted to say that I think you are doing good! Can\'t wait to see what\'s next.</string>
    <string name="local_phrase_15">Don\'t stop believing …ooooo o o</string>
    <string name="local_phrase_16">Thanks for being a great person!</string>
    <string name="local_phrase_17">Weeeeee! When life gives you rollercoasters I just enjoy the ride!!</string>


</resources>
